<resources>
    <string name="app_name">KotlinBasics</string>
    <string name="btn_1">btn 1</string>
    <string name="btn_2">btn 2</string>
    <string name="btn_3">btn 3</string>
    <string name="btn_4">bnt 4</string>
    <string name="btn_5">bnt 5</string>
    <string name="btn_6">btn 6</string>
    <string name="btn_7">btn 7</string>
    <string name="btn_8">btn 8</string>
    <string name="btn_9">btn 9</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email_id">Email Id</string>
    <string name="username">Username</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account">Create an Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="remember_me">Remember Me</string>
</resources>