<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFED4A"
    android:padding="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/create_an_account"
            android:textColor="#000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="16"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black"
            android:textSize="20sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="16"
            android:hint="@string/username"
            android:inputType="text"
            android:textColorHint="@color/black"
            android:textSize="20sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="16"
            android:hint="@string/mobile_no"
            android:inputType="number"
            android:textColorHint="@color/black"
            android:textSize="20sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="16"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            android:textSize="20sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="16"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            android:textSize="20sp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/black"
            android:paddingVertical="12dp"
            android:text="@string/sign_up"
            android:textAllCaps="false" />

    </LinearLayout>


</ScrollView>